2009-10-08  Michael Wiegand <michael.wiegand@intevation.de>

	* nasl/CMakeList.txt: Added defines for _FILE_OFFSET_BITS and
	LARGEFILE_SOURCE since they are needed by GPGME for key access.

2009-10-07  Matthew Mundell <matthew.mundell@intevation.de>

	* misc/openvas_server.c (openvas_server_open): Create address with
	getaddrinfo.

2009-10-06  Tim Brown <timb@openvas.org>

	* misc/network.c, misc/openvas_auth.c, nasl/nasl_scanner_glue.c
	base/openvas_certificate_file.c: Fixed a bunch of resource and memory
	leaks.

2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta4.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.0-beta3 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.0.beta3.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-10-06  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/store.c, nasl/nasl_scanner_glue.c: Replaced openvasd by
	openvassd in documentation, minor cosmetics.

2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	* Makefile: Expose $localstatedir and $sysconfdir set during configure
	time to CMake.

2009-10-06  Michael Wiegand <michael.wiegand@intevation.de>

	* misc/proctitle.c (setproctitle): Changed start of proctitle to match
	the new openvas-scanner binary name.

2009-10-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* include/libopenvas.h: Emptied, except for documentation.

	* Makefile: Do not install libopenvas.h anymore.

2009-10-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* include/libopenvas.h: Removed not needed function declarations and
	includes.

	* MANIFEST: Updated.

2009-10-05  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* includes/nvt_categories.h: New file, contains categories previously
	declared in libopenvas.h and a todo.

	* Makefile: Install nvt_categories.h
