@@ -119,4 +119,7 @@ omp_create_lsc_credential (gnutls_session_t*, const char*, const char*);
 int
 omp_delete_lsc_credential (gnutls_session_t*, const char*);
 
+int
+omp_get_nvt_details_503 (gnutls_session_t*, const char *, entity_t*);
+
 #endif /* not _OPENVAS_LIBRARIES_OMP_H */
